fix(index.html): fix relative path

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <p>You can reach me via <a href="mailto:theodore.corbeaux@gmail.com">email</a> or <a href="https://www.linkedin.com/in/theodoregarsoncorbeaux/" target="_blank">LinkedIn</a>.</p>
       </section>
       <nav>
-        <a href="/About">About</a> |
-        <a class="disabled" href="/blog/">Blog</a>
+        <a href="./About">About</a> |
+        <a class="disabled" href="./blog/">Blog</a>
       </nav>
     </div>
   </div>
