--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p>You can reach me via <a href="mailto:theodore.corbeaux@gmail.com">email</a> or <a href="https://www.linkedin.com/in/theodoregarsoncorbeaux/" target="_blank">LinkedIn</a>.</p>
       </section>
       <nav>
-        <a href="./About">About</a> |
+        <a href="./about">About</a> |
         <a class="disabled" href="./blog/">Blog</a>
       </nav>
     </div>
