feat: 2nd iteration of the website
- Add support for a dark theme (only available through system preferences),
- Fix layout for both Desktop and Mobile,
- Clean up and remove non-necessary code

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <div class="main-content">
     <div class="main-introduction">
       <header class="website-header">
-        <h1 class="headline">THEODORE GARSON</h1>
-        <h2 class="sub-headline">Principal Software Engineer</h2>
+        <h1 class="website-headline">THEODORE GARSON</h1>
+        <h2>Principal Software Engineer</h2>
       </header>
       <section class="website-section">
         <p>Welcome to my personal website</p>
@@ -28,11 +28,11 @@
       </section>
       <nav>
         <a href="./about">About</a> |
-        <a class="disabled" href="./blog/">Blog</a>
+        <a class="website-link--disabled" href="./blog/">Blog</a>
       </nav>
     </div>
   </div>
-  <footer>&copy; Copyright 2021 Theodore Garson</footer>
+  <footer class="website-footer">&copy; Copyright 2021 Theodore Garson</footer>
   <script type="module" src="index.js"></script>
 </body>
 
