--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Theodore Garson's Website" />
-  <link rel="stylesheet" type="text/css" href="/dist/css/markdown.css">
-  <link rel="stylesheet" type="text/css" href="/index.css">
-  <link rel="shorcut icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="stylesheet" type="text/css" href="./dist/css/markdown.css">
+  <link rel="stylesheet" type="text/css" href="./index.css">
+  <link rel="shorcut icon" type="image/x-icon" href="./favicon.ico">
   <title>Theodore Garson's website</title>
 </head>
 
 <body>
-  <script type="module" src="/dist/index.js"></script>
+  <script type="module" src="./dist/index.js"></script>
 </body>
 
 </html>
