--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Theodore Garson's Website" />
-  <link rel="stylesheet" type="text/css" href="./dist/css/markdown.css">
-  <link rel="stylesheet" type="text/css" href="./index.css">
-  <link rel="shorcut icon" type="image/x-icon" href="./favicon.ico">
+  <link rel="stylesheet" type="text/css" href="/website/dist/css/markdown.css">
+  <link rel="stylesheet" type="text/css" href="/website/index.css">
+  <link rel="shorcut icon" type="image/x-icon" href="/website/favicon.ico">
   <title>Theodore Garson's website</title>
   <script>
     (function(){
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-  <script type="module" src="./dist/index.js"></script>
+  <script type="module" src="/website/dist/index.js"></script>
 </body>
 
 </html>
